<resources>
    <string name="app_name">MediScan</string>
    <string name="camera_desc">Camera</string>
    <string name="gallery_desc">Gallery</string>
    <string name="captured_image_desc">Captured Image</string>
    <string name="permission_denied">Permission Denied by User</string>
    <string name="capture_image_desc">Capture Image</string>
    <string name="switch_camera_desc">Switch Camera</string>
    <string name="camera_launch_fail">Camera Failed to Launch</string>
    <string name="success_takePhoto">Image Taken</string>
    <string name="failed_takePhoto">Failed to Take Image</string>
    <string name="welcome_desc">Welcome to MediScan</string>
    <string name="login_desc">Login</string>
    <string name="signup_desc">Signup</string>
    <string name="signup_desc_tagline">Masukan data dibawah ini untuk membuat akun anda</string>
    <string name="username_desc">Username</string>
    <string name="email_desc">Email</string>
    <string name="password_desc">Password</string>
    <string name="regist_success">Sukses Register</string>
    <string name="regist_fail">Gagal Register, Harap Coba Lagi</string>
    <string name="login_desc_tagline">Silahkan masukkan detail akun anda untuk login</string>
    <string name="logout_desc">Logout</string>
    <string name="history_home">History</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="Home_About">About Us</string>
    <string name="lets_start">Lets Start</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="copyright">© 2022 MediScan</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="logo_desc">Logo</string>
    <string name="account_background">Account Background</string>
    <string name="user_logo">User Logo</string>
    <string name="camera_corner">Camera Corner</string>
    <string name="upload_desc">Upload</string>
    <string name="update_default">Update</string>
    <string name="current_username_default">Current Username</string>
    <string name="new_username_default">New Username</string>
    <string name="new_email_default">New Email</string>
    <string name="current_email_default">Old Email</string>
    <string name="fail_change_username">Username tidak bisa sama</string>
    <string name="email_change_fail">Email tidak bisa sama</string>
    <string name="suggestion">Suggestion</string>
    <string name="probable_cancer">Probable Cancer</string>
    <string name="possible_skin_diseases">Possible Skin Diseases</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="sick_desc">Based on our analyzation, your skin feature is not considered as skin cancer, although it might be other skin diseases. We suggest you to contact nearby hospital to get a doctor opinion/medical treatment.</string>
    <string name="cancer_desc">Based on our analyzation, your skin feature is considered as a probable cancer cell. We suggest you to contact nearby hospital to get a medical treatment.</string>
    <string name="not_cancer">Not Cancer</string>
    <string name="image_null">Pilih gambar terlebih dahulu</string>
    <string name="about_us">MediScan is an app that help you to make the right decision about your health. We offer a cheap, mobile and easy method for health screening with your smartphone.</string>
    <string name="history_data">History</string>
    <string name="URI_nearest_hospital">geo:0,0?q=Rumah+sakit+terdekat</string>
    <string name="delete_history">Delete History</string>
    <string name="result_image">Result Image</string>
    <string name="button_to_hospital">Button to Hospital</string>
</resources>