<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CancerActivity">

    <ImageView
        android:id="@+id/Logo_App"
        android:layout_width="183dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mediscan"
        android:contentDescription="@string/logo_desc" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/account_background"
        android:id="@+id/user_background"
        app:layout_constraintTop_toTopOf="@+id/Logo_App"
        android:contentDescription="@string/account_background"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_person_37"
        android:id="@+id/user_logo"
        app:layout_constraintEnd_toEndOf="@+id/user_background"
        app:layout_constraintBottom_toBottomOf="@+id/user_background"
        app:layout_constraintStart_toStartOf="@+id/user_background"
        app:layout_constraintTop_toTopOf="@+id/user_background"
        android:contentDescription="@string/user_logo" />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="267dp"
        android:layout_height="309dp"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_background"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/result_cv"
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginTop="420dp"
        android:background="#E6E5E5"
        android:backgroundTint="#E6E5E5"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                        android:id="@+id/result_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/not_cancer"
                        android:textColor="@color/green_mile"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="@+id/result_suggestion"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/result_suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/suggestion"
                    android:textColor="@color/green_mile"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/result_header" />

                <TextView
                    android:id="@+id/result_desc"
                    android:layout_width="372dp"
                    android:layout_height="156dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/green_mile"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/result_suggestion" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>